Se agregó la opción Gripe al datalist

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                     <option value="Influenza"></option>
                     <option value="Sarampi&oacute;n"></option>
                     <option value="Varicela"></option>
+                    <option value="Gripe"></option>
                 </datalist>
 
                 <button type="submit"><i class="fas fa-search"></i></button>
