--- a/contacto.html
+++ b/contacto.html
@@ -46,7 +46,7 @@
         <section class="contenido">
             <article class="formulario-hijo-contenido">
                 <h2>contacto</h2>
-                <form action="#" method="POST" >
+                <form action="#" >
                     <div>
                     <label for="nombre-apellido"></label>
                     <input type="text" name="nombre-apellido" id="nombre-apellido"
