--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>FAMEDIC - Servicios de salud</title>
         <link rel="stylesheet" href="./css/style.css" />
         <link rel="stylesheet" href="css/index.css" />
         <link
@@ -11,8 +12,12 @@
             integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
             crossorigin="anonymous"
         />
-        <link rel="icon" href="img/logo-favicon.png" type="image/png" sizes="16x16">
-        <title>FAMEDIC - Servicios de salud</title>
+        <link
+            rel="icon"
+            href="img/logo-favicon.png"
+            type="image/png"
+            sizes="16x16"
+        />
     </head>
     <body>
         <header class="header-content">
@@ -39,6 +44,15 @@
                 <button type="submit"><i class="fas fa-search"></i></button>
             </section>
         </header>
+        <nav class="nav-bar">
+            <ul>
+                <li><a href="/index.html">HOME</a></li>
+                <li><a href="/listado-enfermedades.html">ENFERMEDADES</a></li>
+                <li><a href="#">VACUNACI&oacute;N</a></li>
+                <li><a href="/mapa.html">HOSPITALES</a></li>
+                <li><a href="/contacto.html">CONTACTO</a></li>
+            </ul>
+        </nav>
         <main>
             <section class="slider-content">
                 <img src="./img/slider-principal.png" alt="covid" />
@@ -49,7 +63,7 @@
             </section>
             <section class="pastillas-content">
                 <article>
-                    <figure>
+                    <div>
                         <a
                             href="https://www.buenosaires.gob.ar/laciudad/noticias/la-ciudad-instala-19-unidades-febriles-para-atencion-exclusiva-de-coronavirus"
                             target="_blank"
@@ -58,24 +72,23 @@
                                 alt="hospitales-icon"
                                 class="pastillas-img"
                         /></a>
-                    </figure>
+                    </div>
                     <div class="pastillas-link-content">
                         <a
-                            href="https://www.buenosaires.gob.ar/laciudad/noticias/la-ciudad-instala-19-unidades-febriles-para-atencion-exclusiva-de-coronavirus"
-                            target="_blank"
+                            href="mapa.html"
                             class="pastillas-link"
                             >Hospitales</a
                         >
                     </div>
                 </article>
                 <article>
-                    <figure>
+                    <div>
                         <img
                             src="./img/enfermedad-icon-new.png"
                             alt="enfermedad-icon"
                             class="pastillas-img"
                         />
-                    </figure>
+                    </div>
                     <div class="pastillas-link-content">
                         <a
                             href="listado-enfermedades.html"
@@ -85,7 +98,7 @@
                     </div>
                 </article>
                 <article>
-                    <figure>
+                    <div>
                         <a
                             href="https://www.argentina.gob.ar/salud/vacunas"
                             target="_blank"
@@ -94,7 +107,7 @@
                                 alt="vacunas-icon"
                                 class="pastillas-img"
                         /></a>
-                    </figure>
+                    </div>
                     <div class="pastillas-link-content">
                         <a
                             href="https://www.argentina.gob.ar/salud/vacunas"
@@ -116,14 +129,14 @@
             </aside>
         </main>
         <footer>
-            <section class="footer-content">
-                <article class="footer-left">
+            <div class="footer-content">
+                <div class="footer-left">
                     <h4>Datos del Grupo:</h4>
                     <p>Ezequiel Panigazzi - 38.695.636</p>
-                    <p>Lucas Zacarias - 00.000.000</p>
+                    <p>Lucas Zacarias - 42.436.419</p>
                     <p>Julian Castro - 00.000.000</p>
-                </article>
-                <article class="footer-center">
+                </div>
+                <div class="footer-center">
                     <h4>Nombre inferior</h4>
                     <ul>
                         <li>
@@ -132,17 +145,16 @@
                         <li><a href="#">Vacunas</a></li>
                         <li>
                             <a
-                                href="https://www.buenosaires.gob.ar/laciudad/noticias/la-ciudad-instala-19-unidades-febriles-para-atencion-exclusiva-de-coronavirus"
-                                target="_blank"
+                                href="mapa.html"
                                 >Hospitales</a
                             >
                         </li>
                         <li><a href="contacto.html">Contacto</a></li>
                     </ul>
-                </article>
-                <article class="footer-right">
+                </div>
+                <div class="footer-right">
                     <h4>Redes Sociales:</h4>
-                    <figure>
+                    <div>
                         <a href="https://www.facebook.com/" target="_blank"
                             ><i class="fab fa-facebook"></i
                         ></a>
@@ -152,9 +164,9 @@
                         <a href="https://www.twitter.com/" target="_blank"
                             ><i class="fab fa-twitter"></i
                         ></a>
-                    </figure>
-                </article>
-            </section>
+                    </div>
+                </div>
+            </div>
         </footer>
     </body>
 </html>
