--- a/mapa.html
+++ b/mapa.html
@@ -10,11 +10,21 @@
     href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" 
     crossorigin="anonymous">
+    <link
+            rel="icon"
+            href="img/logo-favicon.png"
+            type="image/png"
+            sizes="16x16"
+        />
 </head>
 <body>
     <header class="header-content">
         <section>
-            <img src="./img/logo-favicon.png" alt="logo-web" class="header-img" />
+            <img
+                    src="./img/logo-blanco.png"
+                    alt="logo-web"
+                    class="header-img"
+                />
             <input
                 list="search"
                 placeholder="Ingrese la enfermedad..."
@@ -33,14 +43,15 @@
             <button type="submit"><i class="fas fa-search"></i></button>
         </section>
     </header>
-    <nav class="menu">
+    <nav class="nav-bar">
         <ul>
-            <li><a href="index.html">home</a></li>
-            <li><a href="listado-enfermedades.html">enfermedades</a></li>
-            <li><a href="https://www.argentina.gob.ar/salud/vacunas" target="_blank">vacunaci&oacute;n</a></li>
-            <li><a href="mapa.html">hospitales</a></li>
-            <li><a href="contacto.html">contacto</a></li>
+            <li><a href="/index.html">HOME</a></li>
+            <li><a href="/listado-enfermedades.html">ENFERMEDADES</a></li>
+            <li><a href="#">VACUNACI&oacute;N</a></li>
+            <li><a href="/mapa.html">HOSPITALES</a></li>
+            <li><a href="/contacto.html">CONTACTO</a></li>
         </ul>
+    </nav>
     </nav> 
     <main>
         <section>
